Fix wide logo getting cut off

--- a/src/components/Header/components/HomeIcon/styles.module.sass
+++ b/src/components/Header/components/HomeIcon/styles.module.sass
@@ -14,6 +14,7 @@ $fully-pressed-path: path("M156.284 75.8704C152.06 75.8704 149.144 77.1463 144.1
   overflow: hidden
   height: 100%
   width: auto
+  padding-left: 3px
 
 .logoWide
   display: unset
